%% Harmoni API surface — View 2: what you get back (data model).
%% Legend: *-- composition (owns), o-- aggregation (holds), --> reference.
%% foreground_source is the contrast tier the audit chose for each swatch.
classDiagram
    direction TB
    class PaletteSet {
        +Palette light
        +Palette dark
    }
    class Palette {
        +Curve lightness_curve
        +f32 max_recommended_light_padding
        +f32 max_recommended_dark_padding
        +String note
    }
    class Swatch {
        +f32 l
        +f32 c
        +f32 h
        +SwatchLabel label
        +String hex
        +Rgb rgb
        +String oklch
        +SwatchStep best_foreground
        +ForegroundSource foreground_source
        +ContrastResult contrast_result
    }
    class SwatchStep {
        +f32 l
        +f32 c
        +f32 h
        +SwatchLabel label
        +String hex
        +Rgb rgb
        +String oklch
    }
    class SwatchLabel {
        <<enumeration>>
        Number
        Name
    }
    class ForegroundSource {
        <<enumeration>>
        Step900
        Step50
        SoftWhite
        SoftBlack
        PureWhite
        PureBlack
    }
    class ContrastResult {
        +f32 ratio
        +String display_ratio
        +String rating
    }
    class Rgb {
        +f32 r
        +f32 g
        +f32 b
    }
    class SoftNeutrals {
        +Oklch white
        +Oklch black
    }
    PaletteSet o-- "2" Palette
    Palette *-- "10" Swatch : swatches
    Swatch *-- SwatchStep : best_foreground
    Swatch --> ForegroundSource : foreground_source
    Swatch --> ContrastResult
    Swatch --> Rgb
    Swatch --> SwatchLabel
    SwatchStep --> Rgb
    SwatchStep --> SwatchLabel
